--- a/invite/css/style.css
+++ b/invite/css/style.css
@@ -9614,3 +9614,8 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+    #lovestory-section{
+      @media screen and (min-width:992px)
+      background-size: contain;
+    }
