--- a/invite/css/style.css
+++ b/invite/css/style.css
@@ -8704,7 +8704,14 @@ h5,
     padding: 18px 0 10px 0;
     margin-left:auto;
     margin-right: auto;
+    text-align: center;
     }
+    
+  @media only screen and (max-width: 768px){
+    div#timer .txt-mrg{
+    padding-left: 20px;
+    }
+  }
   #timer:after {
     position: absolute;
     top: 10px;
@@ -9615,6 +9622,3 @@ textarea.form-control {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
 
-
-  @media only screen and (max-width: 768px){
-    }
