--- a/invite/css/style.css
+++ b/invite/css/style.css
@@ -8709,7 +8709,8 @@ h5,
     
   @media only screen and (max-width: 768px){
     div#timer .txt-mrg{
-    padding-left: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     }
   }
   #timer:after {
