--- a/invite/css/style.css
+++ b/invite/css/style.css
@@ -8669,7 +8669,9 @@ h5,
         left: 10px;
         right: 10px;
         bottom: 10px;
-        content: '';
+        content: 'RV';
+        font-size: 53px;
+        color: white;
         border-radius: 50%;
         border: 1.4px dashed rgba(255, 255, 255, 0.3);
         margin: 0 auto; }
