--- a/invite/css/style.css
+++ b/invite/css/style.css
@@ -8672,6 +8672,7 @@ h5,
         content: 'RV';
         font-size: 53px;
         color: white;
+        font-family: 'Rochester';
         border-radius: 50%;
         border: 1.4px dashed rgba(255, 255, 255, 0.3);
         margin: 0 auto; }
