--- a/invite/css/style.css
+++ b/invite/css/style.css
@@ -9554,7 +9554,18 @@ textarea.form-control {
   -o-transition: opacity .2s ease-out, visibility 0s linear .2s;
   transition: opacity .2s ease-out, visibility 0s linear .2s;
   z-index: 1000; }
-
+  #preloader_image{
+    position: absolute;
+    top: 30%;
+    left: 38%;
+  }
+  @media (max-width: 768px) {
+    #preloader_image{
+      position: absolute;
+      left: -8px;
+      top: 23%;
+    }
+  }
 #ftco-loader.fullscreen {
   padding: 0;
   left: 0;
