--- a/invite/css/style.css
+++ b/invite/css/style.css
@@ -8946,6 +8946,13 @@ textarea.form-control {
       background-attachment:scroll;
     }
   }
+  @media only screen 
+  and (min-device-width : 375px) 
+  and (max-device-width : 667px) {
+    .ftco-love{
+      background-attachment:scroll;
+    }
+  }
 
 .timeline {
   list-style: none;
